# meson_ninja_helloworld

./: README  meson.build
src/: main.c  meson.build
src/i2c/: i2c.c  i2c.h  meson.build
src/spi/: meson.build  spi.c  spi.h
