project('meson_ninja_helloworld', 'c',
  version: '0.0.1',
  default_options: [
    'wrap_mode=forcefallback',
    'default_library=static',
    'c_std=gnu11',
    'cpp_std=c++11',
    'warning_level=2'])

# External dependencies
#libevent = dependency('libevent', static: true)

#internal dependencies
#deps += [libs]

# Subdirectories
subdir('src')




